RESOLVED FIXED 243534
[CSS contain] Fix handling of layout/paint containment with internal ruby boxes
https://bugs.webkit.org/show_bug.cgi?id=243534
Summary [CSS contain] Fix handling of layout/paint containment with internal ruby boxes
Rob Buis
Reported 2022-08-04 04:15:34 PDT
Fix handling of layout/paint containment with ruby.
Attachments
Patch (6.17 KB, patch)
2022-08-04 04:17 PDT, Rob Buis
no flags
Patch (6.75 KB, patch)
2022-08-04 07:06 PDT, Rob Buis
no flags
Patch (6.76 KB, patch)
2022-08-08 14:14 PDT, Rob Buis
no flags
Patch (6.78 KB, patch)
2022-08-11 10:24 PDT, Rob Buis
ews-feeder: commit-queue-
Patch (6.74 KB, patch)
2022-08-11 11:24 PDT, Rob Buis
ews-feeder: commit-queue-
Rob Buis
Comment 1 2022-08-04 04:17:58 PDT
EWS Watchlist
Comment 2 2022-08-04 04:19:51 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
Tim Nguyen (:ntim)
Comment 3 2022-08-04 05:41:35 PDT
Comment on attachment 461396 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=461396&action=review > LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-layout-017.html:7 > +<meta name="fuzzy" content="maxDifference=0-3; totalPixels=0-6738" /> Why do we need so many fuzzy pixels?
Rob Buis
Comment 4 2022-08-04 05:55:03 PDT
Comment on attachment 461396 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=461396&action=review >> LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-layout-017.html:7 >> +<meta name="fuzzy" content="maxDifference=0-3; totalPixels=0-6738" /> > > Why do we need so many fuzzy pixels? Quite sure we do not need that many, I had a 1 pixel difference locally. However also locally no fuzzy value for me fixed the test. So now I am wondering what the bots will say, let's see!
Rob Buis
Comment 5 2022-08-04 07:06:56 PDT
Radar WebKit Bug Importer
Comment 6 2022-08-04 15:52:52 PDT
Tim Nguyen (:ntim)
Comment 7 2022-08-08 14:03:39 PDT
Comment on attachment 461398 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=461398&action=review > Source/WebCore/rendering/RenderLayer.cpp:584 > + return !renderer().style().hasAutoUsedZIndex() || renderer().shouldApplyLayoutOrPaintContainment({ Containment::Layout, Containment::Paint }) | isRenderViewLayer(); I don't think you wanted to do the bitwise operator | || ?
Rob Buis
Comment 8 2022-08-08 14:14:53 PDT
Rob Buis
Comment 9 2022-08-08 14:15:36 PDT
Comment on attachment 461398 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=461398&action=review >> Source/WebCore/rendering/RenderLayer.cpp:584 >> + return !renderer().style().hasAutoUsedZIndex() || renderer().shouldApplyLayoutOrPaintContainment({ Containment::Layout, Containment::Paint }) | isRenderViewLayer(); > > I don't think you wanted to do the bitwise operator | > > || ? Well spotted, thnx! Fixed.
EWS
Comment 10 2022-08-11 09:48:59 PDT
No reviewer information in commit message, blocking PR #None
Rob Buis
Comment 11 2022-08-11 10:24:31 PDT
Rob Buis
Comment 12 2022-08-11 11:24:40 PDT
EWS
Comment 13 2022-08-11 17:02:11 PDT
Committed 253354@main (6d0e1e4280d9): <https://commits.webkit.org/253354@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461544 [details].
Note You need to log in before you can comment on or make changes to this bug.