[CSS contain] Fix handling of layout/paint containment with internal ruby boxes https://bugs.webkit.org/show_bug.cgi?id=243534

Reviewed by Alan Bujtas.

Layout and paint containment do not apply to ruby internal boxes [1, 2, 3].

There was a bug in StyleAdjuster where just testing whether contain: layout
was specified meant a stacking context is created. However the correct place
to determine this is shouldBeCSSStackingContext since there we know if the
element qualifies for this (for example internal ruby boxes do not).

The WPT tests are adjusted to use <rt> instead of the unsupported ruby-text
display value. This approach is similar to tests like contain-size-005.html.

[1] https://drafts.csswg.org/css-display-3/#internal-ruby-box
[2] https://drafts.csswg.org/css-contain/#containment-layout
[3] https://drafts.csswg.org/css-contain/#containment-paint

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/background-gradient-subpixel-fills-area.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-layout-017.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-paint-021.html:
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::shouldBeCSSStackingContext const):
* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjust const):

Canonical link: https://commits.webkit.org/253354@main